--- a/myweb/index.html
+++ b/myweb/index.html
@@ -187,6 +187,10 @@
 			</div>
 		</div>
 	</div>
-
+	<footer>
+		<div class="foo">
+			Copyright © 2019 By Ruby,Lin			
+		</div>
+	</footer>
 </body>
 </html>
