--- a/myweb/index.html
+++ b/myweb/index.html
@@ -189,7 +189,7 @@
 	</div>
 	<footer>
 		<div class="foo">
-			Copyright © 2019 By Ruby,Lin			
+			<center class="footext">Copyright © 2019 By Ruby,Lin</center>			
 		</div>
 	</footer>
 </body>
