--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<ul>
 					<h2><li>大學多益考750分以上</li>
 					<li>經濟獨立後養一隻貓</li>
-					<li>畢業前烤到機車駕照</li></h2>	
+					<li>畢業前考到機車駕照</li></h2>	
 				</ul>					
 			</div>
 			<div class="w">
